# llm-from-scratch

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml  references.bib
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
llm_from_scratch/: __init__.py
llm_from_scratch/datasets/: collators.py  instruction_dataset.py  preference_dataset.py  sequence_dataset.py
llm_from_scratch/evaluation/: contamination.py  intrinsic.py  judges.py  memorization.py  significance.py
llm_from_scratch/finetuning/: __init__.py  classification.py  continued_pretraining.py  dpo.py  sft.py  synthetic.py
llm_from_scratch/generation/: chat.py  decoding.py
llm_from_scratch/governance/: audit.py  grounding.py  harness.py  validators.py
llm_from_scratch/inference/: engine.py  kv_cache.py
lm_from_scratch/: __init__.py
tests/: conftest.py  test_attention.py  test_behavioral_eval.py  test_block.py  test_bpe.py  test_capstone.py  test_causal_self_attention.py  test_classification.py  test_decoding.py  test_diagnostics.py  test_dpo.py  test_efficiency.py  test_env.py  test_failure_modes.py  test_governance.py  test_gpt.py  test_interpretability.py  test_intrinsic_eval.py  test_kv_cache.py  test_lora.py  test_mha.py  test_neural_bigram.py  test_ngram.py  test_optim.py  test_perplexity.py  test_positional.py  test_rnn_lm.py  test_scaling.py  test_sft.py  test_text.py  test_tokenizers.py  test_toy_corpus.py
(+96 files in other folders)
